--- a/templates/community/submit_file.html
+++ b/templates/community/submit_file.html
@@ -56,7 +56,7 @@
                             
                             <div class="col-md-6 mb-3">
                                 {{ form.file.label(class="form-label fw-bold") }}
-                                <div class="file-upload-area" onclick="document.getElementById('file').click()">
+                                <div class="file-upload-area">
                                     <i class="fas fa-cloud-upload-alt fa-3x text-muted mb-3"></i>
                                     <h6>Click to select file or drag and drop</h6>
                                     <p class="text-muted small mb-0">
